-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.3.0 RC, 6.4, 6.5.0 Beta3
-
None
-
2
-
619b03401 (dev)
QList is not designed to be exported, changes are made to its interface regularly assuming no Qt code inherits an exported class from it. Changes which are ok for inline API in non-exported classes may cause BiC in exported ones.
Solution: manually un-export QTimerList. This will also be BiC, but QTimerList is private API.
Cf. QTBUG-102367 for an already-solved case.
- clones
-
QTBUG-109084 (potential BiC) Exported class QMqttUserProperties inherits from QList
-
- Open
-
| For Gerrit Dashboard: QTBUG-111959 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 481560,10 | QTimerInfoList: don't inherit from a container in an exported class | dev | qt/qtbase | Status: MERGED | +2 | 0 |