src/corelib/kernel/qtimerinfo_unix_p.h
@@ -34,11 +34,8 @@ struct QTimerInfo {
     QTimerInfo **activateRef; // - ref from activateTimers
 };
 
-class Q_CORE_EXPORT QTimerInfoList : public QList<QTimerInfo*>
+class Q_CORE_EXPORT QTimerInfoList
 {
-    // state variables used by activateTimers()
-    QTimerInfo *firstTimerInfo = nullptr;
-
 public:
     QTimerInfoList();
 
@@ -60,14 +57,28 @@ public:
     int activateTimers();
     bool hasPendingTimers();
 
-    QList::const_iterator findTimerById(int timerId) const
+    void clearTimers()
     {
-        auto matchesId = [timerId](const QTimerInfo *t) { return t->id == timerId; };
-        return std::find_if(cbegin(), cend(), matchesId);
+        qDeleteAll(timers);
+        timers.clear();
+    }
+
+    bool isEmpty() const { return timers.empty(); }
+
+    qsizetype size() const { return timers.size(); }
+
+    auto findTimerById(int timerId)
+    {
+        auto matchesId = [timerId](const auto &t) { return t->id == timerId; };
+        return std::find_if(timers.cbegin(), timers.cend(), matchesId);
     }
 
 private:
     std::chrono::steady_clock::time_point updateCurrentTime();
+
+    // state variables used by activateTimers()
+    QTimerInfo *firstTimerInfo = nullptr;
+    QList<QTimerInfo *> timers;
 };
 
 QT_END_NAMESPACE
